--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   <link rel="stylesheet" href="application.css">
 </head>
 <body>
-  <table>
+  <table id='board'>
     <tr>
       <td>1</td>
-      <td>9</td>
       <td>2</td>
-      <td>10</td>
-    </tr>
-    <tr>
       <td>3</td>
-      <td>11</td>
       <td>4</td>
-      <td>12</td>
     </tr>
     <tr>
       <td>5</td>
-      <td>13</td>
       <td>6</td>
-      <td>14</td>
+      <td>7</td>
+      <td>8</td>
     </tr>
     <tr>
-      <td>7</td>
-      <td>15</td>
-      <td>8</td>
+      <td>9</td>
+      <td>10</td>
+      <td>11</td>
+      <td>12</td>
+    </tr>
+    <tr>
+      <td>13</td>
+      <td>14</td>
       <td class="empty"></td>
+      <td>15</td>
     </tr>
   </table>
 
